# NeoFabUnlimited-SoC

./: .gitignore  README.md
hw/constraints/: basys3.xdc  debug.xdc  nexys_video.xdc
hw/custom/: efpga_manager.v  neo_fab_unlimited_soc_top.vhd  wb_bram.vhd  wb_decoupler.v
hw/fabulous_fabric/Fabric/: eFPGA.v  eFPGA_top.v  models_pack.v
hw/fabulous_fabric/Tile/LUT4AB/: LUT4AB_ConfigMem.v  LUT4AB_switch_matrix.v
hw/fabulous_fabric/Tile/N_term_single/: N_term_single.v
hw/fabulous_fabric/Tile/RAM_IO/: RAM_IO.v  RAM_IO_ConfigMem.v
hw/fabulous_fabric/Tile/S_term_single/: S_term_single.v
hw/fabulous_fabric/Tile/W_IO/: W_IO.v  W_IO_ConfigMem.v
hw_third_party/: README.md
scripts/: wrap_neorv_image.py
sw/zephyr_app/: CMakeLists.txt  app.overlay  prj.conf
sw/zephyr_app/accels/: CMakeLists.txt  accel_add.c  accel_dma_a.c  accel_dma_a.h  accels_registry.h  add_bitstream_raw.h  dma_a.h
sw/zephyr_app/drivers/fpga/: fabulous.h  fabulous_driver.c
sw/zephyr_app/include/: accel_packet.h  accel_platform.h
sw/zephyr_app/lib/accel_manager/: CMakeLists.txt  efpga_footer_raw.h  efpga_header_raw.h  manager.c
sw/zephyr_app/src/: main.c
